Refactoring in progress 3.